Add sticky and play with grid-layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,11 @@
 <!-- This nav gives you links to click, which tells the router which route to use (defined in the routes constant in  AppRoutingModule) -->
 <nav>
   <ul>
-    <!-- <li><a routerLink="/overscroll-behavior" routerLinkActive="active" ariaCurrentWhenActive="page">Overscroll-behavior Demo</a></li> -->
+    
+    <li><a routerLink="/css-grid-layout" routerLinkActive="active" ariaCurrentWhenActive="page">css-grid-layout Demo</a></li>
+    <li><a routerLink="/overscroll-behavior" routerLinkActive="active" ariaCurrentWhenActive="page">Overscroll-behavior Demo</a></li>
+    <li><a routerLink="/table-layout" routerLinkActive="active" ariaCurrentWhenActive="page">table-layout Demo</a></li>
+    <li><a routerLink="/sticky-css" routerLinkActive="active" ariaCurrentWhenActive="page">sticky css Demo</a></li>
     <!-- <li><a routerLink="/sub-grid" routerLinkActive="active" ariaCurrentWhenActive="page">Sub-grid Demo</a></li> -->
   </ul>
 </nav>
